[package]
name = "wcsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
ureq = { version = "2.6.2", features = ["json"] }
serde_json = "1.0.94"
serde = { version = "1.0.154", features = ["derive"] }
csv = "1.2.1"
strum = "0.24.1"
strum_macros = "0.24.1"
